# ztensor

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SPEC.md  pyproject.toml  test_legacy_python.py  test_llm_load.py
.github/workflows/: CI.yml  check.yml  docs.yml
benchmark/: README.md  bench.py  config.py  datagen.py  plot.py  requirements.txt  runners.py  sweep.py
cli/: Cargo.toml  README.md
cli/src/: cli_args.rs  commands.rs  conversions.rs  extractors.rs  format_utils.rs  main.rs  pickle.rs  print_utils.rs  utils.rs
cli/tests/: verify_cli.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gguf.rs  fuzz_hdf5.rs  fuzz_npy_header.rs  fuzz_npz.rs  fuzz_onnx.rs  fuzz_open.rs  fuzz_pickle.rs  fuzz_pickle_vm.rs  fuzz_reader.rs  fuzz_safetensors.rs  fuzz_zt.rs
python/: README.md  test.py
python/examples/: test.py
python/tests/: test_cross_validation.py  test_memory_safety.py  test_ztensor.py
python/ztensor/: __init__.py  _reader.py  _types.py  _writer.py  numpy.py  torch.py
python/ztensor/ztensor/: ffi.py  libztensor.dylib
scripts/: generate_readme_charts.py
src/: compat.rs  error.rs  ffi.rs  gguf_reader.rs  hdf5_reader.rs  lib.rs  models.rs  npz_reader.rs  onnx_reader.rs  pickle_vm.rs  pylib.rs  pytorch_reader.rs  reader.rs  safetensors_reader.rs  utils.rs  writer.rs
tests/: cross_format_tests.rs  format_tests.rs  generate_hdf5_fixtures.py  gguf_tests.rs  hdf5_tests.rs  npz_tests.rs  onnx_tests.rs  pytorch_tests.rs  safetensors_tests.rs  zt_tests.rs
tests/common/: data_generators.rs  mod.rs  npz_builder.rs  onnx_builder.rs  pytorch_builder.rs  safetensors_builder.rs
tests/fixtures/: chunked_1d.h5  chunked_gzip.h5  chunked_shuffle_gzip.h5  chunked_uncompressed.h5  contiguous_simple.h5  generate_hdf5.py  keras_like.h5  mixed_layouts.h5
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: benchmarks.md  cli.md  intro.md  python.md  rust.md  spec.md
website/src/components/: BenchmarkCharts.jsx
website/src/css/: custom.css
