[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ztensor"
version = "1.2.2"
description = "Unified, zero-copy, and safe I/O for deep learning formats."
readme = "README.md" 
authors = [
    { name = "In Gim", email = "in.gim@yale.edu" },
]
license = "MIT" 
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]
[project.optional-dependencies]
bfloat16 = ["ml_dtypes"]

[project.urls]
Homepage = "https://github.com/pie-project/ztensor"
Source = "https://github.com/pie-project/ztensor"

[tool.maturin]
profile = "release"
bindings = "pyo3"
python-source = "python"
features = ["python"]
module-name = "ztensor._ztensor"
