[package]
name = "ztensor-cli"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Command-line tool for zTensor"
license = "MIT"
repository = "https://github.com/pie-project/ztensor/cli"

[[bin]]
name = "ztensor"            # This is the command users will run
path = "src/main.rs"

[dependencies]
ztensor = { path = "../" }
safetensors = "0.4"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
comfy-table = "7.1.0"
humansize = "2.1.3"
gguf-rs = "0.1.4"
serde-pickle = "1.2"
anyhow = "1.0"
indicatif = "0.17"

[features]

[dev-dependencies]
tempfile = "3"
