[package]
name = "ztensor-cli"
version = "1.2.2"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Command-line tool for zTensor"
license = "MIT"
repository = "https://github.com/pie-project/ztensor"

[[bin]]
name = "ztensor"
path = "src/main.rs"

[dependencies]
ztensor = { version = "1.2.2", path = "../", features = ["all-formats"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7.1.0"
humansize = "2.1.3"
anyhow = "1.0"
indicatif = "0.17"
hf-hub = "0.4"

[dev-dependencies]
tempfile = "3"
