[package]
name = "ztensor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ztensor]
path = ".."

[[bin]]
name = "fuzz_reader"
path = "fuzz_targets/fuzz_reader.rs"
test = false
doc = false
bench = false
